<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OpenLocation</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_friends">Friends</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_exit">Deactivate</string>
    <string name="pref_cat_username">Login information</string>
    <string name="pref_cat_username_summary">Username and password information</string>
    <string name="pref_cat_settings">Settings</string>
    <string name="pref_cat_settings_summary">Properties</string>
    <string name="pref_username">Username</string>
    <string name="pref_username_summary">Please enter username[@server]</string>
    <string name="pref_password">Password</string>
    <string name="pref_password_summary">Enter your password</string>
    <string name="pref_activate">Activate</string>
    <string name="pref_activate_summary">Activate regular position updates</string>
    <string name="pref_activeupdate">GPS Updates</string>
    <string name="pref_activeupdate_summary">Do active (GPS) position lookup</string>
    <string name="msg_wrongcredentials">Wrong username/password</string>
    <string name="msg_updatesdisabled">Location updates disabled</string>
    <string name="msg_usernameinvalid">Username wrong format</string>
    <string name="msg_usernotconfigured">Please configure username/password</string>
    <string name="msg_providerdisabled">Provider disabled</string>
    <string name="msg_providerenabled">Provider enabled</string>
    <string name="msg_gpsdisabled">GPS is disabled</string>
    <string name="msg_noconnection">No Internet connection</string>
    <string name="title_activity_open_location_main">OpenLocation</string>
    <string name="title_activity_open_location_prefs">OpenLocation Preferences</string>
    <string name="title_activity_preferences">OpenLocation Preferences</string>
    <string name="title_activity_friends">FriendsActivity</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_advanced">AdvancedActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>

</resources>